--- a/src/css/advertisement.css
+++ b/src/css/advertisement.css
@@ -2,11 +2,10 @@
 
 .advertisement {
   background-color: #fbfbfb;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 10px;
-  display: inline-flex;
+}
+
+.advertisement-container {
+  padding: 0 10px;
 }
 
 .wrap-text-part {
@@ -14,18 +13,8 @@
   max-width: 355px;
   height: 100%;
   background-color: #576f35;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.text-first-part {
-  font-weight: 600;
-  font-size: 48px;
-  line-height: 1.05;
-  letter-spacing: -0.01em;
-  text-transform: uppercase;
-  color: #fbfbfb;
-  margin: 0;
+  padding: 3px 10px 0;
+  margin-bottom: 10px;
 }
 
 .advertisement-text {
@@ -39,17 +28,24 @@
   margin: 0;
 }
 
-@media screen and (min-width: 768px) {
-  .advertisement {
-    padding: 100px 16px;
-  }
+.advertisement-bottom-text {
+  margin: 0 10px;
+}
 
+.text-first-part {
+  color: #fbfbfb;
+}
+
+@media screen and (min-width: 768px) {
   .advertisement-container {
+    padding: 0 16px;
   }
 
   .wrap-text-part {
     max-width: 736px;
     height: 100%;
+    padding: 8px 16px;
+    margin-bottom: 0;
   }
 
   .advertisement-text {
@@ -58,27 +54,27 @@
     line-height: 1.09;
   }
 
+  .advertisement-bottom-text {
+    margin: 0 16px;
+  }
+
   .text-first-part {
     font-size: 64px;
     line-height: 1.09;
   }
-
-  .text-part-taste {
-  }
 }
 
 @media screen and (min-width: 1280px) {
-  .advertisement {
-    padding: 100px 100px;
-    display: block;
-  }
-
   .advertisement-container {
     max-width: 1080px;
+    padding: 0 100px;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .wrap-text-part {
-    max-width: 847px;
+    max-width: 822px;
     height: 100%;
     position: relative;
   }
@@ -100,9 +96,7 @@
     font-size: 76px;
     line-height: 1.05;
     word-wrap: break-word;
-    position: absolute;
-    top: 100px;
-    right: 50px;
+    display: inline-flex;
   }
 
   .wrap-text-part::after {
