--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,64 +1,47 @@
-
-  <!-- footer -->
-  <footer class="footer">
-    <div class="container">
-        <!-- <div class="footer-wrap"> 
-    <div class="footer-logo-wrap">
-        <ul class="footer-logo"> 
-         <li class="footer-logo-item">
-        <div class="footer-icons-wrap"> 
-            <a class="footer-logo-links" href=" ">
-            <svg class="footer-links-icons" width="16" height="16">
-                <use href="./images/icons.svg#icon-Logo-vector"></use>
+<!-- footer -->
+<footer class="footer">
+  <div class="container">
+    <div class="foot-wrap-tab">
+      <div class="foot-firsr-block">
+        <div class="footer-icons-wrap">
+          <a class="footer-logo-links" href=" ">
+            <svg class="footer-links-icons kub" width="16" height="16">
+              <use href="/img/symbol-defs.svg#icon-logo-vector"></use>
             </svg>
-            </a>
+            <svg class="footer-links-icons harv" width="148" height="12">
+              <use href="/img/symbol-defs.svg#icon-green-harvest"></use>
+            </svg>
+          </a>
         </div>
-         </li>
-        </ul> -->
-        
-        <!-- <ul class="footer-logo"> 
-            <li class="footer-logo-item"> -->
-            <div class="foot-wrap-tab">
-                <div class="foot-firsr-block">
-                    <div class="footer-icons-wrap"> 
-                        <a class="footer-logo-links" href=" ">
-                        <svg class="footer-links-icons kub" width="16" height="16">
-                            <use href="/img/symbol-defs.svg#logo-mob-icon"></use>
-                        </svg>
-                        <svg class="footer-links-icons harv" width="148" height="12">
-                            <use href="/img/symbol-defs.svg#icon-green-harvest"></use>
-                        </svg>
-                        </a>
-                    </div>
-        
-                    <p class="footer-text">Whether you're looking for a healthy snack or a thoughtful gift, our fruit baskets are the perfect choice.</p>
-                </div>
-    
-    
-    
-            <div class="footer-menu-section">
-                 <ul class="footer-menu-list"> 
-                    <li><a class="footer-menu-link" href="">how it works</a></li>
-                    <li><a class="footer-menu-link" href="">vegetables</a></li>
-                    <li><a class="footer-menu-link" href="">reviews</a></li>
-                  </ul>
-    
-                  <address class="footer-contacts-list">
-                    <a class="footer-contacts-item" href="tel:+380684439426">+380 (68) 443-94-26</a>
-                    1678 S. Pioneer Road Salt<br /> Lake City UT 84104
-                  </address>        
-            </div>
-            </div>
 
-        <ul class="footer-privacy-block">
-            <li class="footer-privacy-item">  Privacy Policy<span class="footer-slash">/</span>Cookie settings</li>
-            <li class="footer-privacy-item"> &#169;Green Harvest 2023 </li>
-        </ul> 
+        <p class="footer-text">
+          Whether you're looking for a healthy snack or a thoughtful gift, our
+          fruit baskets are the perfect choice.
+        </p>
+      </div>
 
+      <div class="footer-menu-section">
+        <ul class="footer-menu-list">
+          <li><a class="footer-menu-link" href="">how it works</a></li>
+          <li><a class="footer-menu-link" href="">vegetables</a></li>
+          <li><a class="footer-menu-link" href="">reviews</a></li>
+        </ul>
+
+        <address class="footer-contacts-list">
+          <a class="footer-contacts-item" href="tel:+380684439426"
+            >+380 (68) 443-94-26</a
+          >
+          1678 S. Pioneer Road Salt<br />
+          Lake City UT 84104
+        </address>
+      </div>
     </div>
-                
-    
 
-   
-</footer> 
-
+    <ul class="footer-privacy-block">
+      <li class="footer-privacy-item">
+        Privacy Policy<span class="footer-slash">/</span>Cookie settings
+      </li>
+      <li class="footer-privacy-item">&#169;Green Harvest 2023</li>
+    </ul>
+  </div>
+</footer>
