--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -60,7 +60,7 @@
               <p class="how-item-num">2</p>
             </div>
           </div>
-          <p class="how-item-text">
+          <p class="how-item-text how-child-two">
             Click on <span>the basket</span> and fill out the form.
           </p>
         </li>
