--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,13 +1,12 @@
 <section class="section advertisement">
-  <div class="container">
+  <div class="container advertisement-container">
     <h2 class="visually-hidden">Advertisement</h2>
-    <div class="advertisement-container">
       <div class="wrap-text-part">
         <p class="advertisement-text">
           <span class="text-first-part">Discount up to 40%!</span>
         </p>
       </div>
-      <p class="advertisement-text">
+      <p class="advertisement-text advertisement-bottom-text">
         <span class="text-part-taste">Taste</span> the vitamins and keep your
         health
       </p>
