--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,6 +1,7 @@
 <section class="section advertisement">
   <div class="container advertisement-container">
-    <h2 class="visually-hidden">Advertisement</h2>
+    <div class="container advertisement-container">
+      <h2 class="visually-hidden">Advertisement</h2>
       <div class="wrap-text-part">
         <p class="advertisement-text">
           <span class="text-first-part">Discount up to 40%!</span>
@@ -11,5 +12,6 @@
         health
       </p>
     </div>
+    <p class="advertisement-text">Taste the vitamins and keep your health</p>
   </div>
 </section>
