--- a/src/partials/rewiews.html
+++ b/src/partials/rewiews.html
@@ -1,3 +1,5 @@
+<!-- reviews -->
+
 <section class="reviews section" id="reviews-section">
   <div class="container">
     <h2 class="reviews-title">
