--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -2,8 +2,7 @@
 
 .hero {
   background-color: #576f35;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0 auto;
 }
 
 .hero-text-wrap {
@@ -35,82 +34,34 @@
   margin-bottom: 0;
 }
 
-.hero-imeage {
-  background-image: linear-gradient(
-      rgba(20, 20, 20, 0.2),
-      rgba(20, 20, 20, 0.2)
-    ),
-    url('/img/hero-mob-img.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 370px;
-  margin-right: auto;
-  margin-left: auto;
+.hero-image-wrap {
+  position: relative;
+  max-width: 375px;
+  max-height: 370px;
+  margin: 0 auto;
 }
-@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
-  screen and (min-resolution: 192dpi) and (max-width: 767px),
-  screen and (min-resolution: 2dppx) and (max-width: 767px) {
-  .hero-imeage {
-    background-image: linear-gradient(
-        rgba(20, 20, 20, 0.2),
-        rgba(20, 20, 20, 0.2)
-      ),
-      url('/img/hero-mob-img@2x.jpg');
-  }
+
+.hero-image-wrap::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(20, 20, 20, 0.2), rgba(20, 20, 20, 0.2));
 }
 
 @media screen and (min-width: 768px) {
-  .hero-imeage {
-    background-image: linear-gradient(
-        rgba(20, 20, 20, 0.2),
-        rgba(20, 20, 20, 0.2)
-      ),
-      url('/img/hero-tab-img.jpg');
-  }
-}
-
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-  screen and (min-resolution: 192dpi) and (min-width: 768px),
-  screen and (min-resolution: 2dppx) and (min-width: 768px) {
-  .hero-imeage {
-    background-image: linear-gradient(
-        rgba(20, 20, 20, 0.2),
-        rgba(20, 20, 20, 0.2)
-      ),
-      url('/img/hero-tab-img@2x.jpg');
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .hero-imeage {
-    background-image: linear-gradient(
-        rgba(20, 20, 20, 0.2),
-        rgba(20, 20, 20, 0.2)
-      ),
-      url('/img/hero-desk-img.jpg');
-    min-width: 650px;
-    min-height: none;
-  }
-}
-
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px),
-  screen and (min-resolution: 192dpi) and (min-width: 1280px),
-  screen and (min-resolution: 2dppx) and (min-width: 1280px) {
-  .hero-imeage {
-    background-image: linear-gradient(
-        rgba(20, 20, 20, 0.2),
-        rgba(20, 20, 20, 0.2)
-      ),
-      url('/img/hero-desk-img@2x.jpg');
-  }
-}
-@media screen and (min-width: 768px) {
-  .hero-text-wrap {
+  .hero-container {
     padding-top: 122px;
     padding-bottom: 50px;
     padding-right: 32px;
     padding-left: 32px;
+  }
+
+  .hero-text-wrap {
     align-items: flex-start;
+    padding: 0;
     gap: 25px;
   }
 
@@ -124,12 +75,30 @@
     font-size: 16px;
     max-width: 603px;
   }
+
+  .hero-image-wrap {
+    max-width: 768px;
+    max-height: 539px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
-  .hero-text {
-    font-size: 16px;
-    max-width: 472px;
+  .hero {
+    display: flex;
+  }
+
+  .hero-container {
+    display: flex;
+    width: 630px;
+    padding-top: 238px;
+    padding-left: 100px;
+    padding-right: 28px;
+  }
+
+  .hero-text-wrap {
+    align-items: center;
+    align-items: flex-start;
+    gap: 128px;
   }
 
   .hero-title {
@@ -137,20 +106,13 @@
     max-width: 502px;
   }
 
-  .hero-text-wrap {
-    padding-top: 238px;
-    padding-left: 100px;
-    padding-right: 28px;
-    align-items: center;
-    align-items: flex-start;
-    gap: 128px;
+  .hero-text {
+    font-size: 16px;
+    max-width: 472px;
   }
 
-  .hero {
-    display: flex;
-  }
-
-  .hero-container {
-    display: flex;
+  .hero-image-wrap {
+    max-width: 650px;
+    max-height: 800px;
   }
 }
