--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,3 @@
-
 <section class="hero">
   <div class="container hero-container">
     <div class="hero-text-wrap">
@@ -11,6 +10,25 @@
       </p>
     </div>
   </div>
-  <div class="hero-imeage"></div>
+  <div class="hero-image-wrap">
+    <picture class="hero-img">
+      <source
+        media="(min-width: 1280px)"
+        srcset="./img/hero-desk-img@2x.jpg 2x, ./img/hero-desk-img.jpg 1x"
+      />
+      <source
+        media="(min-width: 768px)"
+        srcset="./img/hero-tab-img@2x.jpg 2x, ./img/hero-tab-img.jpg 1x"
+      />
+      <source
+        media="(min-width: 375px)"
+        srcset="./img/hero-mob-img@2x.jpg 2x, ./img/hero-mob-img.jpg 1x"
+      />
+      <img
+        class="hero-img"
+        src="./img/hero-mob-img.jpg"
+        alt="Busket with vegetables"
+      />
+    </picture>
+  </div>
 </section>
-
