--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,6 +1,5 @@
-
 <section class="advertisement">
-  <div class="container">
+  <div class="container advertisement-container">
     <h2 class="visually-hidden">Advertisement</h2>
 
     <p class="advertisement-text">
