--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,4 +1,4 @@
-<section class="advertisement">
+<section class="section advertisement">
   <div class="container advertisement-container">
     <h2 class="visually-hidden">Advertisement</h2>
 
