--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -1,7 +1,7 @@
 <!-- how-it-works -->
 
-<section class="how-it-works" id="how-it-works-section">
-  <div class="how-top-wrap">
+<section class="section how-it-works" id="how-it-works-section">
+  <div class="container how-it-works-container">
     <div class="how-img-wrap">
       <picture class="how-img">
         <source
@@ -27,7 +27,7 @@
         />
         <img
           class="how-img"
-          src="./img/how-it-works-tab-img.jpg"
+          src="./img/how-it-works-mob-img.jpg"
           alt="Woman inthe kitchen"
         />
       </picture>
