--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -1,6 +1,6 @@
 <!-- your-order -->
 
-<section class="your-order">
+<section class="section your-order" id="your-order-section">
   <div class="container">
     <h2 class="order-subtitle">
       Fresh <span class="decorated-red-txt">Harvest</span> Box has got you
