--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -94,15 +94,19 @@
         <p class="order-social-txt">Follow us on our social networks:</p>
         <ul class="order-social-list">
           <li class="order-social-link">
-            <a href="https://www.instagram.com/goitclub/">instagram</a>
+            <a target="_blank" href="https://www.instagram.com/goitclub/"
+              >instagram</a
+            >
           </li>
           <li class="order-slash"><span>/</span></li>
           <li class="order-social-link">
-            <a href="https://www.facebook.com/goITclub/">facebook</a>
+            <a target="_blank" href="https://www.facebook.com/goITclub/"
+              >facebook</a
+            >
           </li>
           <li class="order-slash"><span>/</span></li>
           <li class="order-social-link">
-            <a href="https://www.youtube.com/c/GoIT">youtube</a>
+            <a target="_blank" href="https://www.youtube.com/c/GoIT">youtube</a>
           </li>
         </ul>
       </div>
