--- a/src/css/advertisement.css
+++ b/src/css/advertisement.css
@@ -7,6 +7,7 @@
 .advertisement-container {
   padding: 0;
   width: calc(100% - 20px);
+  margin: 0 auto;
 }
 
 .text-first-part {
@@ -44,12 +45,12 @@
 
 @media screen and (min-width: 768px) {
   .advertisement {
-    padding: 100px 16px;
+    padding: 100px 0;
   }
 
   .advertisement-container {
     padding: 0;
-    max-width: 736px;
+    width: 736px;
   }
 
   .advertisement-text {
