--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -38,8 +38,14 @@
           <a class="footer-contacts-item" href="tel:+380684439426"
             >+380 (68) 443-94-26</a
           >
-          1678 S. Pioneer Road Salt<br />
-          Lake City UT 84104
+          <a
+            class="footer-contacts-item"
+            target="_blank"
+            href="https://maps.app.goo.gl/foiQ9gnP6QMREtSj7"
+          >
+            1678 S. Pioneer Road Salt<br />
+            Lake City UT 84104
+          </a>
         </address>
       </div>
     </div>
