--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -38,7 +38,7 @@
             <a class="header-nav-link" href="#reviews-section">Reviews</a>
           </li>
         </ul>
-        <button type="button" class="header-shop-button">Shop now</button>
+        <a href="#your-order-section" class="header-shop-button"> Shop now </a>
       </nav>
     </div>
   </div>
