--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -4,12 +4,15 @@
   background-color: #576f35;
 }
 
+.hero-container {
+  width: 100%;
+}
+
 .hero-text-wrap {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: calc(100% - 40px);
   padding-top: 100px;
   padding-bottom: 40px;
+  margin: 0 auto;
 }
 
 .hero-title {
@@ -35,9 +38,6 @@
 
 .hero-image-wrap {
   position: relative;
-  max-width: 375px;
-  max-height: 370px;
-  margin: 0 auto;
 }
 
 .hero-image-wrap::after {
@@ -50,29 +50,36 @@
   background: linear-gradient(rgba(20, 20, 20, 0.2), rgba(20, 20, 20, 0.2));
 }
 
+@media screen and (min-width: 375px) {
+  .hero-text-wrap {
+    width: 335px;
+  }
+  .hero-container {
+    width: 375px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .hero-container {
+    width: 768px;
     padding-top: 122px;
-    padding-bottom: 50px;
-    /* padding-right: 32px;
-    padding-left: 32px; */
   }
 
   .hero-text-wrap {
-    align-items: flex-start;
+    width: 704px;
     padding: 0;
-    gap: 25px;
   }
 
   .hero-title {
     font-size: 76px;
     max-width: 704px;
-    margin-bottom: 0;
+    margin-bottom: 25px;
   }
 
-  .hero-text {
+  .hero-text-wrap .hero-text {
     font-size: 16px;
     max-width: 603px;
+    margin-bottom: 50px;
   }
 
   .hero-image-wrap {
@@ -88,26 +95,25 @@
 
   .hero-container {
     display: flex;
-    width: 630px;
-    padding-top: 238px;
-    padding-left: 100px;
-    padding-right: 28px;
+    width: 1280px;
+    padding-top: 0;
   }
 
   .hero-text-wrap {
-    align-items: center;
-    align-items: flex-start;
-    gap: 128px;
+    width: 502px;
+    margin: 228px 44px 50px 100px;
   }
 
   .hero-title {
     font-size: 76px;
     max-width: 502px;
+    margin-bottom: 128px;
   }
 
-  .hero-text {
+  .hero-text-wrap .hero-text {
     font-size: 16px;
     max-width: 472px;
+    margin-bottom: 0;
   }
 
   .hero-image-wrap {
