--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,7 +15,7 @@
           </a>
         </div>
 
-        <button type="button" class="open-menu-btn">
+        <button type="button" class="open-menu-btn js-open-menu">
           <svg class="header-menu-icon">
             <use href="/img/symbol-defs.svg#menu-open-icon"></use>
           </svg>
