--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -1,7 +1,6 @@
 /* =================MENU==================== */
 .back-menu {
   position: fixed;
-  /* background: rgba(20, 20, 20, 0.4); */
   background-color: #7a3145;
   top: 0;
   width: 100%;
@@ -12,6 +11,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+  z-index: 999;
+}
+
+.back-menu.is-open {
+  transform: translateX(0);
 }
 
 .modal-menu {
