--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,6 +1,6 @@
-<div class="back-menu">
+<div class="back-menu js-menu-container">
   <div class="modal-menu">
-    <button class="menu-close" type="button">
+    <button class="menu-close js-close-menu" type="button">
       <svg class="menu-close-icon" width="32" height="32">
         <use href="../img/symbol-defs.svg#mob-menu-close-mobil-icon"></use>
       </svg>
@@ -18,6 +18,11 @@
         <a class="menu-nav-link" href="#reviews-section">Reviews</a>
       </li>
     </ul>
-    <button type="button" class="menu-button">Shop now</button>
+    <a
+      type="button"
+      href="#your-order-section"
+      class="menu-nav-link menu-button"
+      >Shop now</a
+    >
   </div>
 </div>
